# aiogram-project-template

./: .env.dist  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.yaml  pyproject.toml  pyrightconfig.json
bot/: __main__.py
bot/config/: __init__.py  config.py  logger.py
bot/database/: __init__.py  database.py
bot/database/migrations/: env.py
bot/database/models/: __init__.py  base.py
bot/database/repositories/: __init__.py  abstract.py
bot/filters/: __init__.py  admin.py  chat_type.py
bot/handlers/: __init__.py  help.py  start.py  unhandled.py
bot/middlewares/: __init__.py  database.py  exception.py  logging.py
bot/schemas/: __init__.py  types.py
bot/templates/: __init__.py  help.py  start.py  unhandled.py
